[package]
name = "cardano-kes"
version = "0.1.0"
edition = "2021"
rust-version = "1.91"
authors = ["FractionEstate <contact@fractionestate.com>"]
license = "MIT OR Apache-2.0"
description = "Pure Rust implementation of Cardano Key Evolving Signatures (KES)"
repository = "https://github.com/FractionEstate/Cardano-KES"
documentation = "https://docs.rs/cardano-kes"
keywords = ["cardano", "kes", "cryptography", "blockchain", "key-evolving"]
categories = ["cryptography", "no-std"]
readme = "README.md"

[dependencies]
# Core dependencies
thiserror = "2.0"
blake2 = "0.10"

# Serialization (optional)
serde = { version = "1.0", optional = true, default-features = false, features = ["derive"] }

[dev-dependencies]
hex = "0.4"
serde_json = "1.0"

[features]
default = ["std"]
std = ["thiserror/std", "serde?/std"]
serde = ["dep:serde"]
kes-metrics = []  # Lightweight metrics for benchmarking

[[example]]
name = "basic_usage"
required-features = []

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[profile.release]
lto = true
codegen-units = 1
opt-level = 3
